fix about require files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-logger",
+    "name": "node-text-plain-logger",
     "preferGlobal": "true",
     "version": "0.0.1",
     "author": "Piotr Kowalski <piecioshka@gmail.com>",
@@ -10,20 +10,17 @@
             "email": "piecioshka@gmail.com"
         }
     ],
-    "main": "./lib/logger",
     "repository": {
         "type": "git",
-        "url": "https://github.com/piecioshka/node-logger.git"
+        "url": "git@github.com:piecioshka/node-text-plain-logger.git"
     },
-    "keywords": [],
+    "keywords": [
+        "logger",
+        "plain text"
+    ],
     "dependencies": {
         "buster": "0.6.2"
     },
-    "analyze": false,
-    "devDependencies": {
-    },
-    "bundleDependencies": [
-    ],
     "license": "MIT",
     "engines": {
         "node": ">=0.6"
